# deep-research-agent

./: .gitignore  README.md  start.sh  test_backend.py
backend/: .env.example  pyproject.toml  requirements.txt  start_simple.py
backend/evaluation/: run_evaluation.py  test_queries.json
backend/scripts/: test_rag.py
backend/src/: __init__.py  agent.py  agent_langgraph.py  config.py  langgraph_llm.py  main.py  models.py  prompts.py  tool_aware_agent.py  utils.py
backend/src/graph/: __init__.py  builder.py  nodes.py  state.py
backend/src/services/: __init__.py  document_processor.py  planner.py  rag.py  reporter.py  search.py  summarizer.py
docs/: architecture_comparison.md  architecture_langgraph.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: ResearchModal.vue
frontend/src/composables/: useResearch.ts
